# horoscope

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  prospector.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
horoscope_app/: apps.py  models.py  services.py  urls.py  views.py
horoscope_app/migrations/: 0001_initial.py  0002_auto_20230302_1715.py
horoscope_app/migrations/fixtures/: dump_db.json
horoscope_app/templates/horoscope_app/: base.html  detail_horoscope.html  index.html
horoscope_app/tests/: __init__.py  test_models.py  test_services.py  test_views.py
horoscope_project/: asgi.py  settings.py  urls.py  wsgi.py
