[tool.poetry]
name = "horoscope"
version = "0.1.0"
description = ""
authors = ["Alexandr <maximchik.alexandr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.6.0"
certifi = "2022.12.7"
charset-normalizer = "3.0.1"
django = "4.1.7"
idna = "3.4"
psycopg2-binary = "2.9.5"
python-dotenv = "1.0.0"
requests = "2.28.2"
sqlparse = "0.4.3"
urllib3 = "1.26.14"
xmltodict = "0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
